crates/daemon/tests/snapshots/daemon_foundation__system_reconciliation_phases.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: phase_events
---
[
    Object {
        "event": String("reconciliation_phase_completed"),
        "kind": String("reconcile"),
        "level": String("info"),
        "message": String("reconciliation phase completed"),
        "outcome": String("succeeded"),
        "phase": String("queue"),
        "scope": String("system"),
        "subject": String("job"),
        "target": String("reconciliation"),
    },
    Object {
        "event": String("reconciliation_phase_completed"),
        "fallback_count": Number(0),
        "kind": String("reconcile"),
        "level": String("info"),
        "message": String("reconciliation phase completed"),
        "outcome": String("succeeded"),
        "phase": String("demand_discovery"),
        "project_count": Number(0),
        "scope": String("system"),
        "subject": String("linked_projects"),
        "target": String("reconciliation"),
    },
    Object {
        "event": String("reconciliation_phase_completed"),
        "kind": String("reconcile"),
        "level": String("info"),
        "message": String("reconciliation phase completed"),
        "outcome": String("succeeded"),
        "phase": String("resources"),
        "scope": String("system"),
        "subject": String("desired_resources"),
        "target": String("reconciliation"),
    },
    Object {
        "event": String("reconciliation_phase_completed"),
        "failed_count": Number(0),
        "kind": String("reconcile"),
        "level": String("info"),
        "message": String("reconciliation phase completed"),
        "outcome": String("succeeded"),
        "phase": String("project_apply"),
        "project_count": Number(0),
        "scope": String("system"),
        "subject": String("linked_projects"),
        "succeeded_count": Number(0),
        "target": String("reconciliation"),
    },
    Object {
        "event": String("reconciliation_phase_completed"),
        "kind": String("reconcile"),
        "level": String("info"),
        "message": String("reconciliation phase completed"),
        "outcome": String("succeeded"),
        "phase": String("workers"),
        "project_count": Number(0),
        "scope": String("system"),
        "subject": String("php_workers"),
        "target": String("reconciliation"),
        "worker_count": Number(0),
    },
    Object {
        "event": String("reconciliation_phase_completed"),
        "kind": String("reconcile"),
        "level": String("info"),
        "message": String("reconciliation phase completed"),
        "outcome": String("succeeded"),
        "phase": String("gateway"),
        "project_count": Number(0),
        "scope": String("system"),
        "subject": String("gateway"),
        "target": String("reconciliation"),
    },
    Object {
        "event": String("reconciliation_phase_completed"),
        "kind": String("reconcile"),
        "level": String("info"),
        "message": String("reconciliation phase completed"),
        "outcome": String("succeeded"),
        "phase": String("workers"),
        "scope": String("system"),
        "subject": String("stale_workers"),
        "target": String("reconciliation"),
    },
    Object {
        "coverage_count": Number(2),
        "event": String("reconciliation_phase_completed"),
        "kind": String("reconcile"),
        "level": String("info"),
        "message": String("reconciliation phase completed"),
        "outcome": String("succeeded"),
        "phase": String("finalization"),
        "scope": String("system"),
        "subject": String("job"),
        "target": String("reconciliation"),
    },
]
