crates/daemon/tests/snapshots/daemon_foundation__unsupported_job_streams_failure_event_and_persists_failed_status.snap
---
source: crates/daemon/tests/daemon_foundation.rs
assertion_line: 221
expression: snapshot
---
(
    [
        Object {
            "job_id": String("job_000001"),
            "message": String("job accepted"),
            "protocol_version": Number(1),
            "status": String("accepted"),
            "type": String("response"),
        },
        Object {
            "job_id": String("job_000001"),
            "kind": String("unsupported"),
            "scope": String("system"),
            "type": String("job_started"),
        },
        Object {
            "job_id": String("job_000001"),
            "message": String("stub job started"),
            "type": String("log"),
        },
        Object {
            "error": String("unsupported daemon job `unsupported` with scope `system`"),
            "job_id": String("job_000001"),
            "type": String("job_failed"),
        },
    ],
    [
        JobRecord {
            id: "job_000001",
            kind: "unsupported",
            scope: "system",
            status: Failed,
            started_at: "<timestamp>",
            finished_at: Some(
                "<timestamp>",
            ),
            summary: None,
            error: Some(
                "unsupported daemon job `unsupported` with scope `system`",
            ),
        },
    ],
)
