crates/daemon/tests/snapshots/daemon_foundation__update_lock_rejects_update_jobs_before_manifest_refresh.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: snapshot
---
(
    [
        Object {
            "message": String("PV self-update/daemon mutation coordination is active; the OS lock is held on <update-lock>"),
            "protocol_version": Number(3),
            "status": String("error"),
            "type": String("response"),
        },
    ],
    [],
    0,
)
