crates/daemon/tests/snapshots/daemon_foundation__update_locks_delay_startup_reconciliation_but_keep_health_available.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: snapshot
---
(
    [
        Object {
            "message": String("PV self-update/daemon mutation coordination is active; the OS lock is held on \"<jobs-lock>\""),
            "protocol_version": Number(3),
            "status": String("error"),
            "type": String("response"),
        },
    ],
    [
        Object {
            "message": String("daemon healthy"),
            "protocol_version": Number(3),
            "status": String("ok"),
            "type": String("response"),
        },
    ],
    [
        Object {
            "message": String("state error: PV self-update/daemon mutation coordination is active; the OS lock is held on \"<update-lock>\""),
            "protocol_version": Number(3),
            "status": String("error"),
            "type": String("response"),
        },
    ],
    [
        JobRecord {
            id: "job_000001",
            kind: "reconcile",
            scope: "system",
            status: Succeeded,
            started_at: "<timestamp>",
            finished_at: Some(
                "<timestamp>",
            ),
            summary: Some(
                "Gateway runtime reconciled",
            ),
            error: None,
        },
    ],
)
