crates/daemon/tests/snapshots/daemon_foundation__valid_reconciliation_scopes_stream_stub_completion.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: snapshot
---
(
    [
        Object {
            "job_id": String("job_000002"),
            "message": String("job accepted"),
            "protocol_version": Number(3),
            "status": String("accepted"),
            "type": String("response"),
        },
        Object {
            "job_id": String("job_000002"),
            "kind": String("reconcile"),
            "scope": String("resource:mysql:8.4"),
            "type": String("job_started"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("Managed Resource runtime reconciliation started"),
            "type": String("log"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("resources"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("finalization"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "summary": String("Managed Resource mysql track 8.4 reconciled"),
            "type": String("job_completed"),
        },
    ],
    [
        JobRecord {
            id: "job_000002",
            kind: "reconcile",
            scope: "resource:mysql:8.4",
            status: Succeeded,
            started_at: "<timestamp>",
            finished_at: Some(
                "<timestamp>",
            ),
            summary: Some(
                "Managed Resource mysql track 8.4 reconciled",
            ),
            error: None,
        },
        JobRecord {
            id: "job_000001",
            kind: "reconcile",
            scope: "system",
            status: Succeeded,
            started_at: "<timestamp>",
            finished_at: Some(
                "<timestamp>",
            ),
            summary: Some(
                "Gateway runtime reconciled",
            ),
            error: None,
        },
    ],
)
